--- a/wearable/src/main/res/values/strings.xml
+++ b/wearable/src/main/res/values/strings.xml
@@ -1,5 +1,9 @@
 <resources>
-    <string name="app_name">Wearable</string>
+    <string name="app_name">Sunshine</string>
     <string name="hello_round">Hello Round World!</string>
     <string name="hello_square">Hello Square World!</string>
+    <string name="my_analog_name">Sunshine Analog</string>
+    <string name="my_digital_name">Sunshine Digital</string>
+    <string name="temp_low">LOW</string>
+    <string name="temp_high">HIGH</string>
 </resources>
