--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -226,4 +226,7 @@
     <string name="gcm_weather_alert">Heads up: %1$s in %2$s!</string>
     // TODO: Get the SenderID from the Developer Console
     <string name="gcm_defaultSenderId" translatable="false"></string>
+
+    <!-- For Wearables -->
+    <string name="weather_data_path">/weather-data</string>
 </resources>
