--- a/wearable/src/main/res/values/strings.xml
+++ b/wearable/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:xliff="http://schemas.android.com/tools">
     <string name="app_name">Sunshine</string>
     <string name="hello_round">Hello Round World!</string>
     <string name="hello_square">Hello Square World!</string>
@@ -9,4 +9,9 @@
 
     <!--Path for data items -->
     <string name="weather_data_path">/weather-data</string>
+
+    <!--Date strings from App Utility Class -->
+    <string name="today">Today</string>
+    <string name="tomorrow">Tomorrow</string>
+    <string name="format_full_friendly_date"><xliff:g id="month">%1$s</xliff:g>, <xliff:g id="day">%2$s</xliff:g></string>
 </resources>
